--- a/print.html
+++ b/print.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">rust_xlsxwriter</a></li><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="tutorial/intro.html"><strong aria-hidden="true">2.</strong> Tutorial</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tutorial/tutorial1.html"><strong aria-hidden="true">2.1.</strong> Adding data to a worksheet</a></li><li class="chapter-item expanded "><a href="tutorial/tutorial2.html"><strong aria-hidden="true">2.2.</strong> Adding some formatting</a></li><li class="chapter-item expanded "><a href="tutorial/tutorial3.html"><strong aria-hidden="true">2.3.</strong> Adding dates and more formatting</a></li></ol></li><li class="chapter-item expanded "><a href="workbook/intro.html"><strong aria-hidden="true">3.</strong> The Workbook struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="workbook/saving.html"><strong aria-hidden="true">3.1.</strong> Creating and saving an xlsx file</a></li></ol></li><li class="chapter-item expanded "><a href="worksheet/intro.html"><strong aria-hidden="true">4.</strong> The Worksheet struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="worksheet/create.html"><strong aria-hidden="true">4.1.</strong> Creating worksheets</a></li><li class="chapter-item expanded "><a href="worksheet/page_setup.html"><strong aria-hidden="true">4.2.</strong> Page Setup</a></li><li class="chapter-item expanded "><a href="worksheet/headers.html"><strong aria-hidden="true">4.3.</strong> Adding Headers and Footers</a></li><li class="chapter-item expanded "><a href="worksheet/autofit.html"><strong aria-hidden="true">4.4.</strong> Autofitting column widths</a></li><li class="chapter-item expanded "><a href="worksheet/tabs.html"><strong aria-hidden="true">4.5.</strong> Working with worksheet tabs</a></li></ol></li><li class="chapter-item expanded "><a href="format/intro.html"><strong aria-hidden="true">5.</strong> The Format struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="format/creating.html"><strong aria-hidden="true">5.1.</strong> Creating and using a Format object</a></li><li class="chapter-item expanded "><a href="format/defaults.html"><strong aria-hidden="true">5.2.</strong> Format defaults</a></li><li class="chapter-item expanded "><a href="format/methods.html"><strong aria-hidden="true">5.3.</strong> Format methods</a></li><li class="chapter-item expanded "><a href="format/categories.html"><strong aria-hidden="true">5.4.</strong> Number Format Categories</a></li><li class="chapter-item expanded "><a href="format/locals.html"><strong aria-hidden="true">5.5.</strong> Number Formats in different Locals</a></li></ol></li><li class="chapter-item expanded "><a href="colors/intro.html"><strong aria-hidden="true">6.</strong> Working with Colors</a></li><li class="chapter-item expanded "><a href="formulas/intro.html"><strong aria-hidden="true">7.</strong> Working with Formulas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="formulas/results.html"><strong aria-hidden="true">7.1.</strong> Formula Results</a></li><li class="chapter-item expanded "><a href="formulas/syntax.html"><strong aria-hidden="true">7.2.</strong> Non US Excel functions and syntax</a></li><li class="chapter-item expanded "><a href="formulas/dynamic_arrays.html"><strong aria-hidden="true">7.3.</strong> Dynamic Array support</a></li><li class="chapter-item expanded "><a href="formulas/future_functions.html"><strong aria-hidden="true">7.4.</strong> Formulas added in Excel 2010 and later</a></li><li class="chapter-item expanded "><a href="formulas/errors.html"><strong aria-hidden="true">7.5.</strong> Dealing with formula errors</a></li></ol></li><li class="chapter-item expanded "><a href="examples/intro.html"><strong aria-hidden="true">8.</strong> Cookbook Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/hello_world.html"><strong aria-hidden="true">8.1.</strong> Hello World</a></li><li class="chapter-item expanded "><a href="examples/demo.html"><strong aria-hidden="true">8.2.</strong> Feature demo</a></li><li class="chapter-item expanded "><a href="examples/formatting.html"><strong aria-hidden="true">8.3.</strong> Cell formatting</a></li><li class="chapter-item expanded "><a href="examples/merge_range.html"><strong aria-hidden="true">8.4.</strong> Merging cells</a></li><li class="chapter-item expanded "><a href="examples/colors.html"><strong aria-hidden="true">8.5.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="examples/hyperlinks.html"><strong aria-hidden="true">8.6.</strong> Hyperlinks</a></li><li class="chapter-item expanded "><a href="examples/images.html"><strong aria-hidden="true">8.7.</strong> Inserting images</a></li><li class="chapter-item expanded "><a href="examples/right_to_left.html"><strong aria-hidden="true">8.8.</strong> Right to left display</a></li><li class="chapter-item expanded "><a href="examples/dynamic_arrays.html"><strong aria-hidden="true">8.9.</strong> Dynamic array formulas</a></li><li class="chapter-item expanded "><a href="examples/headers.html"><strong aria-hidden="true">8.10.</strong> Headers and Footers</a></li><li class="chapter-item expanded "><a href="examples/watermark.html"><strong aria-hidden="true">8.11.</strong> Adding a watermark</a></li><li class="chapter-item expanded "><a href="examples/panes.html"><strong aria-hidden="true">8.12.</strong> Freeze Panes</a></li><li class="chapter-item expanded "><a href="examples/autofit.html"><strong aria-hidden="true">8.13.</strong> Autofitting columns</a></li></ol></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">9.</strong> Performance</a></li><li class="chapter-item expanded "><a href="changelog.html"><strong aria-hidden="true">10.</strong> Release Notes</a></li><li class="chapter-item expanded "><a href="license.html"><strong aria-hidden="true">11.</strong> License</a></li><li class="chapter-item expanded "><a href="author.html"><strong aria-hidden="true">12.</strong> Author</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">rust_xlsxwriter</a></li><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="tutorial/intro.html"><strong aria-hidden="true">2.</strong> Tutorial</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tutorial/tutorial1.html"><strong aria-hidden="true">2.1.</strong> Adding data to a worksheet</a></li><li class="chapter-item expanded "><a href="tutorial/tutorial2.html"><strong aria-hidden="true">2.2.</strong> Adding some formatting</a></li><li class="chapter-item expanded "><a href="tutorial/tutorial3.html"><strong aria-hidden="true">2.3.</strong> Adding dates and more formatting</a></li></ol></li><li class="chapter-item expanded "><a href="workbook/intro.html"><strong aria-hidden="true">3.</strong> The Workbook struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="workbook/saving.html"><strong aria-hidden="true">3.1.</strong> Creating and saving an xlsx file</a></li></ol></li><li class="chapter-item expanded "><a href="worksheet/intro.html"><strong aria-hidden="true">4.</strong> The Worksheet struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="worksheet/create.html"><strong aria-hidden="true">4.1.</strong> Creating worksheets</a></li><li class="chapter-item expanded "><a href="worksheet/page_setup.html"><strong aria-hidden="true">4.2.</strong> Page Setup</a></li><li class="chapter-item expanded "><a href="worksheet/headers.html"><strong aria-hidden="true">4.3.</strong> Adding Headers and Footers</a></li><li class="chapter-item expanded "><a href="worksheet/autofit.html"><strong aria-hidden="true">4.4.</strong> Autofitting column widths</a></li><li class="chapter-item expanded "><a href="worksheet/tabs.html"><strong aria-hidden="true">4.5.</strong> Working with worksheet tabs</a></li></ol></li><li class="chapter-item expanded "><a href="format/intro.html"><strong aria-hidden="true">5.</strong> The Format struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="format/creating.html"><strong aria-hidden="true">5.1.</strong> Creating and using a Format object</a></li><li class="chapter-item expanded "><a href="format/defaults.html"><strong aria-hidden="true">5.2.</strong> Format defaults</a></li><li class="chapter-item expanded "><a href="format/methods.html"><strong aria-hidden="true">5.3.</strong> Format methods</a></li><li class="chapter-item expanded "><a href="format/categories.html"><strong aria-hidden="true">5.4.</strong> Number Format Categories</a></li><li class="chapter-item expanded "><a href="format/locals.html"><strong aria-hidden="true">5.5.</strong> Number Formats in different Locals</a></li></ol></li><li class="chapter-item expanded "><a href="colors/intro.html"><strong aria-hidden="true">6.</strong> Working with Colors</a></li><li class="chapter-item expanded "><a href="formulas/intro.html"><strong aria-hidden="true">7.</strong> Working with Formulas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="formulas/results.html"><strong aria-hidden="true">7.1.</strong> Formula Results</a></li><li class="chapter-item expanded "><a href="formulas/syntax.html"><strong aria-hidden="true">7.2.</strong> Non US Excel functions and syntax</a></li><li class="chapter-item expanded "><a href="formulas/dynamic_arrays.html"><strong aria-hidden="true">7.3.</strong> Dynamic Array support</a></li><li class="chapter-item expanded "><a href="formulas/future_functions.html"><strong aria-hidden="true">7.4.</strong> Formulas added in Excel 2010 and later</a></li><li class="chapter-item expanded "><a href="formulas/errors.html"><strong aria-hidden="true">7.5.</strong> Dealing with formula errors</a></li></ol></li><li class="chapter-item expanded "><a href="examples/intro.html"><strong aria-hidden="true">8.</strong> Cookbook Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/hello_world.html"><strong aria-hidden="true">8.1.</strong> Hello World</a></li><li class="chapter-item expanded "><a href="examples/demo.html"><strong aria-hidden="true">8.2.</strong> Feature demo</a></li><li class="chapter-item expanded "><a href="examples/formatting.html"><strong aria-hidden="true">8.3.</strong> Cell formatting</a></li><li class="chapter-item expanded "><a href="examples/merge_range.html"><strong aria-hidden="true">8.4.</strong> Merging cells</a></li><li class="chapter-item expanded "><a href="examples/rich_strings.html"><strong aria-hidden="true">8.5.</strong> Rich strings</a></li><li class="chapter-item expanded "><a href="examples/colors.html"><strong aria-hidden="true">8.6.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="examples/hyperlinks.html"><strong aria-hidden="true">8.7.</strong> Hyperlinks</a></li><li class="chapter-item expanded "><a href="examples/images.html"><strong aria-hidden="true">8.8.</strong> Inserting images</a></li><li class="chapter-item expanded "><a href="examples/right_to_left.html"><strong aria-hidden="true">8.9.</strong> Right to left display</a></li><li class="chapter-item expanded "><a href="examples/dynamic_arrays.html"><strong aria-hidden="true">8.10.</strong> Dynamic array formulas</a></li><li class="chapter-item expanded "><a href="examples/headers.html"><strong aria-hidden="true">8.11.</strong> Headers and Footers</a></li><li class="chapter-item expanded "><a href="examples/watermark.html"><strong aria-hidden="true">8.12.</strong> Adding a watermark</a></li><li class="chapter-item expanded "><a href="examples/panes.html"><strong aria-hidden="true">8.13.</strong> Freeze Panes</a></li><li class="chapter-item expanded "><a href="examples/autofit.html"><strong aria-hidden="true">8.14.</strong> Autofitting columns</a></li></ol></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">9.</strong> Performance</a></li><li class="chapter-item expanded "><a href="changelog.html"><strong aria-hidden="true">10.</strong> Release Notes</a></li><li class="chapter-item expanded "><a href="license.html"><strong aria-hidden="true">11.</strong> License</a></li><li class="chapter-item expanded "><a href="author.html"><strong aria-hidden="true">12.</strong> Author</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -3768,6 +3768,80 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     // Save the file to disk.
     workbook.save(&quot;merge_range.xlsx&quot;)?;
+
+    Ok(())
+}
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="rich-strings"><a class="header" href="#rich-strings">Rich strings</a></h1>
+<p>An example of writing &quot;rich&quot; multi-format strings to worksheet cells.</p>
+<p><strong>Image of the output file:</strong></p>
+<p><img src="examples/../../images/app_rich_strings.png" alt="Image of output from app_rich_strings.rs" /></p>
+<p><strong>Code to generate the output file:</strong></p>
+<pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
+</span><span class="boring">// Copyright 2022, John McNamara, jmcnamara@cpan.org
+</span><span class="boring">
+</span><span class="boring">//! An example of using the rust_xlsxwriter library to write &quot;rich&quot; multi-format
+</span><span class="boring">//! strings in worksheet cells.
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxAlign, XlsxColor, XlsxError, XlsxScript};
+
+fn main() -&gt; Result&lt;(), XlsxError&gt; {
+    // Create a new Excel file object.
+    let mut workbook = Workbook::new();
+
+    // Add a worksheet to the workbook.
+    let worksheet = workbook.add_worksheet();
+
+    worksheet.set_column_width(0, 30)?;
+
+    // Add some formats to use in the rich strings.
+    let default = Format::default();
+    let red = Format::new().set_font_color(XlsxColor::Red);
+    let blue = Format::new().set_font_color(XlsxColor::Blue);
+    let bold = Format::new().set_bold();
+    let italic = Format::new().set_italic();
+    let center = Format::new().set_align(XlsxAlign::Center);
+    let superscript = Format::new().set_font_script(XlsxScript::Superscript);
+
+    // Write some rich strings with multiple formats.
+    let segments = [
+        (&amp;default, &quot;This is &quot;),
+        (&amp;bold, &quot;bold&quot;),
+        (&amp;default, &quot; and this is &quot;),
+        (&amp;italic, &quot;italic&quot;),
+    ];
+    worksheet.write_rich_string_only(0, 0, &amp;segments)?;
+
+    let segments = [
+        (&amp;default, &quot;This is &quot;),
+        (&amp;red, &quot;red&quot;),
+        (&amp;default, &quot; and this is &quot;),
+        (&amp;blue, &quot;blue&quot;),
+    ];
+    worksheet.write_rich_string_only(2, 0, &amp;segments)?;
+
+    let segments = [
+        (&amp;default, &quot;Some &quot;),
+        (&amp;bold, &quot;bold text&quot;),
+        (&amp;default, &quot; centered&quot;),
+    ];
+    worksheet.write_rich_string(4, 0, &amp;segments, &amp;center)?;
+
+    let segments = [(&amp;italic, &quot;j = k&quot;), (&amp;superscript, &quot;(n-1)&quot;)];
+    worksheet.write_rich_string(6, 0, &amp;segments, &amp;center)?;
+
+    // It is possible, and idiomatic, to use slices as the string segments.
+    let text = &quot;This is blue and this is red&quot;;
+    let segments = [
+        (&amp;default, &amp;text[..8]),
+        (&amp;blue, &amp;text[8..12]),
+        (&amp;default, &amp;text[12..25]),
+        (&amp;red, &amp;text[25..]),
+    ];
+    worksheet.write_rich_string_only(8, 0, &amp;segments)?;
+
+    // Save the file to disk.
+    workbook.save(&quot;rich_strings.xlsx&quot;)?;
 
     Ok(())
 }
