--- a/examples/intro.html
+++ b/examples/intro.html
@@ -150,6 +150,7 @@ the rust_xlsxwriter library.</p>
 <li><a href="./demo.html">Feature demo</a>: Demonstrates more features of the library.</li>
 <li><a href="./formatting.html">Cell formatting</a>: Demonstrates various formatting options.</li>
 <li><a href="./merge_range.html">Merging cells</a>: An example of merge cell ranges.</li>
+<li><a href="./rich_strings.html">Rich strings</a>: Add multi-font &quot;rich&quot; strings to a worksheet.</li>
 <li><a href="./colors.html">Format colors</a>: Creates a palette of the available colors.</li>
 <li><a href="./hyperlinks.html">Hyperlinks</a>: Add hyperlinks to a worksheet.</li>
 <li><a href="./images.html">Insert images</a>: Add images to a worksheet.</li>
